[project]
name = "hems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "fastapi-mcp>=0.4.0",
    "httpx>=0.28.1",
    "langchain>=1.1.3",
    "langchain-core>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "mango-agents>=2.1.5",
    "numpy>=1.24.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pydantic>=2.12.5",
    "streamlit>=1.52.2",
    "streamlit-agraph>=0.0.45",
    "streamlit-autorefresh>=1.0.1",
    "uvicorn>=0.38.0",
]
